--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ a {
 header {
     width: 100%;
     height: 100px;
-    background-color: var(--black-chocolate);
+    background-color: var(--xandu);
     border: 2px solid var(--terra-cotta);
     box-sizing: border-box;
 
@@ -40,7 +40,7 @@ header {
 #icon h1{
     margin: 0;
     font-size: 280%;
-    color: var(--terra-cotta);
+    color: var(--white);
     margin-top: 15px;
 }
 /* nav items styling */
@@ -55,13 +55,13 @@ header {
     display: inline-block;
     margin-right: 30px;
     font-size: 2em;
-    color: var(--terra-cotta);
+    color: var(--white);
     line-height: 60px;
     
 }
 
 #nav-items li:hover{
-    border-bottom: 1px solid var(--terra-cotta);
+    border-bottom: 1px solid var(----white);
 }
 
 /* Styling for title image */
@@ -81,9 +81,11 @@ header {
     height: 100%;
 }
 
+
+
 /* styling cover text over image */
 #cover-text {
-    width: 100%px;
+    width: 100%;
     height: 200px;
     background-color: rgba(125, 133, 112, 0.8);
     position: relative;
@@ -106,5 +108,45 @@ header {
     list-style-type: none;
 }
 
+/* creating the about sections width and height */
+
+#about {
+    width: 100%;
+    height: 500px;
+    background-color: var(--xandu);
+    box-sizing: border-box;
+    border-bottom: 1px solid var(--terra-cotta);
+}
+
+/* making the content within the about section become inline blocks */
+
+#about-content {
+    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+
+/* photo of gordon and its border */
+
+#gordon-photo-outer {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin-left: 100px;
+    margin-top: 50px;
+    
+}
+
+#gordon-photo-inner {
+    background: url('../images/gordon.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
+}
 
 
