inital commit, created basic structure of HTML page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,152 +1,15 @@
-/* creating a color pallete for whole website */
-:root {
-    --black-chocolate: #191308;
-    --black-coffee: #322A26;
-    --terra-cotta: #E07A5F;
-    --white: #fff;
-    --xandu: #7D8570;
-  }
-/* clearing any default margin or padding and setting font family */
-body{
+
+/* creating root colors so colors are consistent within the web page for a consistent design */
+
+:root{
+    --black: #122344;
+}
+
+/* removing any defualt margins/padding within the body */
+
+body {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* all a tags remove link color and inherit color from parent element */
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-/* nav bar styling */
-
-header {
-    width: 100%;
-    height: 100px;
-    background-color: var(--xandu);
-    border: 2px solid var(--terra-cotta);
-    box-sizing: border-box;
-
-}
-
-/* sizing icon text for the header */
-#icon{
-    float: left;
-    margin-left: 60px;
-    margin-bottom: 10px;
-}
-
-#icon h1{
-    margin: 0;
-    font-size: 280%;
-    color: var(--white);
-    margin-top: 15px;
-}
-/* nav items styling */
-#nav-bar {
-    float: right;
-    margin-right: 60px;
-}
-
-#nav-items li{
-    text-decoration: none;
-    list-style-type: none;
-    display: inline-block;
-    margin-right: 30px;
-    font-size: 2em;
-    color: var(--white);
-    line-height: 60px;
-    
-}
-
-#nav-items li:hover{
-    border-bottom: 1px solid var(----white);
-}
-
-/* Styling for title image */
-
-#home-image-outer {
-    width: 100%;
-    height: 700px;
-    background-color: #322A26;
-    border: 2px solid var(--terra-cotta);
-    box-sizing: border-box;
-}
-
-/* adding image */
-
-#home-image {
-    background: url(../images/food-image.jpg) no-repeat center center;
-    height: 100%;
-}
-
-
-
-/* styling cover text over image */
-#cover-text {
-    width: 100%;
-    height: 200px;
-    background-color: rgba(125, 133, 112, 0.8);
-    position: relative;
-    margin: auto;
-    top: 35%;
-    border-radius: 10px;
-}
-
-#cover-text h1{
-    margin: 0;
-    color: white;
-    text-align: center;
-    font-size: 3.5em;
-}
-
-#cover-text ul li{
-    color: white;
-    text-align: center;
-    font-size: 1.5em;
-    list-style-type: none;
-}
-
-/* creating the about sections width and height */
-
-#about {
-    width: 100%;
-    height: 500px;
-    background-color: var(--xandu);
-    box-sizing: border-box;
-    border-bottom: 1px solid var(--terra-cotta);
-}
-
-/* making the content within the about section become inline blocks */
-
-#about-content {
-    display: inline-block;
-    position: relative;
-    width: 200px;
-    height: 200px;
-}
-
-
-/* photo of gordon and its border */
-
-#gordon-photo-outer {
-    width: 300px;
-    height: 300px;
-    padding: 30px;
-    border-style: solid;
-    border-color: #ccc;
-    border-width: 1px;
-    border-radius: 50%;
-    margin-left: 100px;
-    margin-top: 50px;
-    
-}
-
-#gordon-photo-inner {
-    background: url('../images/gordon.jpg') no-repeat center center;
-    height: 100%;
-    border-radius: 50%;
-}
-
-
+/* https://www.pexels.com/photo/data-codes-through-eyeglasses-577585/ */
