finished stylign nav bar and logo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,20 +2,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300&display=swap');
 
 
-/* creating root colors so colors are consistent within the web page for a consistent design */
-
-:root{
-    --light-goldenrod-yellow: #F6FEDB;
-    --forest-green-traditional: #1E441E;
-    --pakistan-green: #2A7221;
-    --lime-green: #31cb00;
-}
-
 /* removing any defualt margins/padding within the body */
 
 body {
     margin: 0;
     padding: 0;
     font-family: 'Anton','Roboto';
-    background-color: var(--light-goldenrod-yellow);
+    ;
 }
+
+/* styling for nav bar */
+
+#logo {
+  float: left;
+  color: white;
+  letter-spacing: 20px;
+  text-transform: uppercase;
+  margin-left: 50px;
+}
+
+#navbar{
+    background-color: black;
+    color: black;
+    text-align: right;
+    position: fixed;
+    top: 0;  
+    width: 100%;
+  }
+  
+  .buttonDesign{
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 15px;
+    border: 2px solid white;
+    background-color: white;
+    border-radius: 3px;
+    text-decoration: none;
+    color: black;
+    margin-right: 30px;
+  }
+ 
+  .buttonDesign:hover{
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+  }
+
+  /* creating container space for the title image section */
+
+  
