--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,7 @@ body {
     position: fixed;
     top: 0;  
     width: 100%;
+    z-index: 2;
   }
   
 .buttonDesign{
@@ -114,7 +115,7 @@ to{
 
 #life-hack-container {
   width: 100%;
-  height: 1620px;
+  height: 1640px;
   background-color: black;
   color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -127,6 +128,9 @@ to{
 #hack-title {
   text-align: center;
   font-size: 400%;
+  padding-top: 20px;
+  text-decoration: underline;
+  text-transform: uppercase;
 }
 
   /* styling for the first life hack */
@@ -218,6 +222,7 @@ to{
   font-size: 200%;
   color: black;
   padding-top: 200px;
+  z-index: 3;
 }
 
 #social-icons li{
@@ -229,4 +234,59 @@ to{
 
 #social-icons li a{
   color: black;
+}
+
+/* feeback page styling */
+
+#feedback-body{
+  background: url('../images/feedback-background.jpg') no-repeat center center;
+  height: 100%;
+  position: relative;
+  background-size: cover;
+  opacity: 1;
+}
+
+/* form styling */
+
+
+#main-box{
+  display: block;
+  margin: auto;
+  margin-top: 300px;
+  margin-bottom: 100vh;
+  max-width: 50%;
+  background-color: rgba(255, 255, 255,0.6);
+  border-radius: 10px;
+  border: 40px solid rgba(0, 0, 0, 0);
+}
+
+.label-style {
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.5em;
+}
+
+.the-inputs{
+  width: 97%;
+  border-radius: 5px;
+  border: 10px solid white;
+  margin-top: 0.8em;
+  margin-bottom: 0.7em;
+}
+
+#suggestions{
+  min-width: 99%;
+  max-width: 99%;
+  min-height: 100px;
+  margin-top: 0.8em;
+}
+
+#submit{
+  width: 100%;
+  background-color: #abffb0;
+  border-radius: 5px;
+  border: 10px solid #abffb0;
+  color: black;
+  font-size: 25px;
+  margin-top: 0.8em;
 }
