--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -253,7 +253,7 @@ to{
   display: block;
   margin: auto;
   margin-top: 300px;
-  margin-bottom: 100vh;
+  margin-bottom: 50vh;
   max-width: 50%;
   background-color: rgba(255, 255, 255,0.6);
   border-radius: 10px;
@@ -289,4 +289,53 @@ to{
   color: black;
   font-size: 25px;
   margin-top: 0.8em;
+}
+
+
+@media screen and (max-width: 800px){
+  #navbar{
+    text-align: center;
+    padding-left: 20px;
+  }
+  #logo {
+    float: none;
+    text-align: center;
+    margin: 0;
+    margin-top: 10px;
+    margin-right: 15px;
+  }
+  
+  #life-hack-container {
+    width: 100%;
+  }
+
+  .life-hack-temp {
+    display: block;
+    flex-direction: row;
+    background-color: black;
+    position: relative;
+    height: 100vh ;
+
+  }
+  #social-media-container {
+    width: 100%;
+    height: 500px;
+    background-color: white;
+    margin-top: 160vh;
+  }
+
+  .left-hack-text, .right-hack-text{
+    padding: 30px;
+  }
+
+  .hack-img-border{
+    width: 100%;
+  }
+
+  #hack-img, #hack2-img, #hack3-img {
+    margin: 0 auto;
+  } 
+
+
+
 }
