added to markdown

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,6 +243,12 @@ to{
 /* form styling */
 
 
+#form-title{
+  text-align: center;
+  letter-spacing: 10px;
+}
+
+
 #main-box{
   display: block;
   margin: auto;
